# Geophysical-Electromagnetic-Scanner

./: .gitignore  HsHP.dwf3work  LICENSE  README.md  classification.ipynb  environment.yml  forward_simulation_demo.ipynb  simulating_simple_uxo.ipynb  testing_coil_spacing.ipynb  testing_coil_spacing_1D.ipynb  testing_frequency_sweep.ipynb
1D_UXO_simulation/: 1D_UXO_EMField_simulation.ipynb  1D_UXO_simulation.ipynb  UXO_object.py
ML_Inversion/: generate_em_dataset.py  pyproject.toml  train_inversion_diffusion.py  train_inversion_model.py
ML_Inversion/datasets/: conductivity_dataset.py  create_conductivity_map.py  em_dataset.py
Matlab/: Rx_Circuit.slx  Tx_Driver.slx
UXO_simulation/: UXO_object.py  create_visuals.ipynb  dipole_forward_sim_test.ipynb  forward_freq_simulation.py  forward_freq_survey.py  forward_pipe_sim.ipynb  forward_simulation_1D.ipynb  inversion_simulation_1D.ipynb  layered_earth.py  layered_inversion.py  non_inversion_predict.ipynb  simple_test_script.ipynb
basic_experiment_tests/: creating_uxo_object.ipynb  simple_multi_tx_rx_test.ipynb  testing_frequency_sweep.ipynb
forward_data/: em1dfm_data.txt
forward_simulation/: __init__.py  forward_pipe_sim.ipynb  forward_pipe_sim.py
inversion/: hankelpts.py  hankelwts.py  hankelwts_wt0.txt  hankelwts_wt1.txt  test_inversion.ipynb
matlab/: .gitignore  2dCoilSim.m  AudioTester.dwf3work  LoadADProComplex.m  LoadADProMeasure.m  TxCoilSim.slx  biotsavartintegrator.m  coil_distance_sim.m  compare_model_measurement.m  compare_primary_measures.m  curve_fit_primary.asv  curve_fit_primary.m  curve_fit_primary_transmission.m  data_real_imag.mat  dirty_primary_data.mat  electromagnet_model.asv  electromagnet_model.m  extract_primary.m  generate_coil_currents.m  get_hs_hp_subtract.m  hshpFromCSV.m  hshp_from_curvefit.m  model_rxcoil.m  primary_curve_fit.mat  primary_curve_fit_python.mat  primary_curve_fit_python2.mat  simulate_coils.asv  simulate_coils.m  theoretical_response.mat
python/: AnalogIn_FFT.py  AnalogNetwork_Analyzer.py  AnalogOut_Sweep.py  FrequencySpectrum.py  HsHpMultiFrequency.py  HsHpSingleFrequency.py  HsHpSingleSweep.py  HsHpSweepGraphic.py  HsHpTestSweep.py  Live_Transfer_Function_Analysis.py  Network_Analyzer.py  README.md  SingleFrequencyAnalyzerApp.py  Transfer_Function_Analysis.py  WaveformInterface.py  fdem_1d_model.pth  fusion_kalman.py  generate_dataset.py  generate_dataset_background.py  geophysical_scanner.py  midi_player.py  pyproject.toml  run_inversion.py  sensor_fusion_plotting.py  sensor_fusion_service.py  single_tone_fft_analyzer.py  training.py
python/data/: peak_magnitude_data_20250327_214821.csv  peak_magnitude_data_20250402_141945.csv  peak_magnitude_data_20250403_171712.csv
python/models/: fdem_1d_model_2.pth
simpeg_examples_mesh/: mesh_testing.ipynb
