[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.5.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "control==0.10.1",
    "cycler==0.12.1",
    "filterpy>=1.4.5",
    "fonttools==4.55.8",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "keyboard==0.13.5",
    "kiwisolver==1.4.8",
    "llvmlite>=0.44.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "mido>=1.3.3",
    "narwhals==1.25.1",
    "notebook>=7.3.3",
    "numba>=0.61.0",
    "numpy>=2.0.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "protobuf==5.29.3",
    "pyarrow==19.0.0",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "scikit-learn>=1.6.1",
    "scipy==1.15.1",
    "simpeg>=0.23.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.42.0",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
